--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,9 @@
-//主项目切换
-if (rootProject.launcher.app) {
-    apply plugin: 'com.android.application'
-} else {
-    apply plugin: 'com.android.library'
-}
+
+apply plugin: 'com.android.application'
 android {
     compileSdkVersion rootProject.ext.android.compileSdkVersion
     defaultConfig {
-        if (rootProject.launcher.app) {
+        if (!rootProject.libAsApplication) {
             applicationId rootProject.ext.android.applicationId
         }
         minSdkVersion rootProject.ext.android.minSdkVersion
@@ -31,7 +27,7 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    if (rootProject.launcher.app) {
+    if (!rootProject.libAsApplication) {
         implementation project(":margin_login")
         implementation project(":margin_register")
     }
