--- a/margin_login/src/main/debug/AndroidManifest.xml
+++ b/margin_login/src/main/debug/AndroidManifest.xml
@@ -5,7 +5,7 @@
         android:name="debug.LoginApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="login"
+        android:label="@string/login_app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/login_AppTheme">
