--- a/margin_login/src/main/release/AndroidManifest.xml
+++ b/margin_login/src/main/release/AndroidManifest.xml
@@ -2,8 +2,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.margin.login">
 
-    <application>
-        <activity android:name=".LoginActivity"></activity>
+    <application
+        android:allowBackup="true"
+
+        android:supportsRtl="true">
+        <activity
+            android:name=".LoginActivity"
+            android:exported="true"></activity>
     </application>
 
 </manifest>
