--- a/margin_register/src/main/debug/AndroidManifest.xml
+++ b/margin_register/src/main/debug/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:label="Register"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/register_AppTheme">
         <activity android:name=".RegisterActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
