修改模块独立开关

--- a/config.gradle
+++ b/config.gradle
@@ -1,11 +1,11 @@
 ext {
 
     libAsApplication = true
-    launcher = [
-            app     : true,
-            login   : true,
-            register: true
-    ]
+//    launcher = [
+//            app     : true,
+//            login   : true,
+//            register: true
+//    ]
 
 
     android = [
