修改模块独立开关

--- a/config.gradle
+++ b/config.gradle
@@ -1,5 +1,5 @@
 ext {
-
+    //模块是否单独运行，true-module作为app，false-module作为library
     libAsApplication = true
 //    launcher = [
 //            app     : true,
