--- a/margin_base/build.gradle
+++ b/margin_base/build.gradle
@@ -1,35 +1,35 @@
-apply plugin: 'com.android.application'
+apply plugin: 'com.android.library'
+
 android {
-    compileSdkVersion rootProject.ext.android.compileSdkVersion
+    compileSdkVersion rootProject.android.compileSdkVersion
+
+
     defaultConfig {
-        if (!rootProject.libAsApplication) {
-            applicationId rootProject.ext.android.applicationId
-        }
         minSdkVersion rootProject.ext.android.minSdkVersion
         targetSdkVersion rootProject.ext.android.targetSdkVersion
         versionCode rootProject.ext.android.versionCode
         versionName rootProject.ext.android.versionName
+
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        resourcePrefix "base_"
     }
+
     buildTypes {
         release {
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+
     implementation rootProject.ext.dependencies.support_v7
     implementation rootProject.ext.dependencies.constraintLayout
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    if (!rootProject.libAsApplication) {
-        implementation project(":margin_login")
-        implementation project(":margin_register")
-    } else {
-        implementation project(":margin_base")
-    }
+    implementation project (":margin_common")
 }
