--- a/margin_base/src/main/AndroidManifest.xml
+++ b/margin_base/src/main/AndroidManifest.xml
@@ -1,2 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.margin.base" />
+    package="com.margin.base" >
+
+    <uses-permission android:name="android.permission.READ_PHONE_NUMBERS" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+</manifest>
