--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,13 @@
 apply plugin: 'com.android.application'
+//butterknife
+//apply plugin: 'com.jakewharton.butterknife'
 android {
     compileSdkVersion rootProject.ext.android.compileSdkVersion
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
     defaultConfig {
         if (!rootProject.libAsApplication) {
             applicationId rootProject.ext.android.applicationId
@@ -26,13 +33,14 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-        implementation project(":margin_base")
+    implementation project(":margin_base")
     if (rootProject.libAsApplication) {
 
     } else {
         implementation project(":margin_login")
         implementation project(":margin_register")
         implementation project(":margin_home")
+        implementation project(":margin_setting")
         implementation project(":margin_discovery")
     }
 
