--- a/margin_discovery/build.gradle
+++ b/margin_discovery/build.gradle
@@ -5,6 +5,10 @@ if (rootProject.libAsApplication) {
 }
 android {
     compileSdkVersion rootProject.android.compileSdkVersion
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 
 
     defaultConfig {
@@ -12,6 +16,9 @@ android {
         targetSdkVersion rootProject.ext.android.targetSdkVersion
         versionCode rootProject.ext.android.versionCode
         versionName rootProject.ext.android.versionName
+        if (rootProject.libAsApplication){
+            applicationId "com.margin.discovery"
+        }
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         resourcePrefix 'discovery_'
@@ -27,11 +34,12 @@ android {
     sourceSets{
         main{
             if (rootProject.libAsApplication){
-
-            manifest.srcFile 'src/main/debug/AndroidManifest.xml'
+                manifest.srcFile 'src/main/debug/AndroidManifest.xml'
             }else {
-
-            manifest.srcFile 'src/main/release/AndroidManifest.xml'
+                manifest.srcFile 'src/main/release/AndroidManifest.xml'
+                java{
+                    exclude "debug/**"
+                }
             }
         }
     }
