--- a/margin_home/build.gradle
+++ b/margin_home/build.gradle
@@ -5,6 +5,10 @@ if (rootProject.libAsApplication) {
 }
 android {
     compileSdkVersion rootProject.android.compileSdkVersion
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 
 
     defaultConfig {
