--- a/margin_login/build.gradle
+++ b/margin_login/build.gradle
@@ -5,6 +5,10 @@ if (rootProject.libAsApplication) {
 }
 android {
     compileSdkVersion rootProject.ext.android.compileSdkVersion
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 
 
 
@@ -55,4 +59,5 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation project(":margin_base")
+    annotationProcessor 'com.github.mzule.activityrouter:compiler:1.1.7'
 }
