--- a/margin_login/src/main/release/AndroidManifest.xml
+++ b/margin_login/src/main/release/AndroidManifest.xml
@@ -8,7 +8,18 @@
         android:supportsRtl="true">
         <activity
             android:name=".LoginActivity"
-            android:exported="true"></activity>
+            android:exported="true"/>
+        <!--ActivityRouter配置2-->
+        <activity
+            android:name="com.github.mzule.activityrouter.router.RouterActivity"
+            android:theme="@android:style/Theme.NoDisplay">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <data android:scheme="login" /><!--改成自己的scheme-->
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
